rtptheoradepay: Fix memory leaks

The same memory leaks were fixed in identical fashion for
vorbisdepay in 06efeff5d979576a252e5dae57f46d6445b1df12 in 2009.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=755277